include $(top_srcdir)/Makefile.decl

NULL =

SUBDIRS = \
	  data \
	  src \
	  $(NULL)

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh ltmain.sh     \
                       Makefile.in missing config.h.in            \
                       mkinstalldirs src/*.h src/*.c .deps stamp-h1
