include $(top_srcdir)/Makefile.decl

NULL =

SUBDIRS = \
	conf \
	data \
	api \
	system \
	$(NULL)

MAINTAINERCLEANFILES = \
	m4/libtool.m4 \
	m4/lt~obsolete.m4 \
	m4/ltoptions.m4 \
	m4/ltsugar.m4 \
	m4/ltversion.m4 \
	m4/libtool.m4 \
	ltmain.sh \
	depcomp \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	install-sh \
	Makefile.in \
	missing \
	config.h.in

EXTRA_DIST = \
	AUTHORS \
	COPYING \
	README \
	autogen.sh
