include $(top_srcdir)/Makefile.decl

NULL =

SUBDIRS = \
	conf \
	data \
	src \
	tests \
	$(NULL)

DISTCHECK_CONFIGURE_FLAGS = --disable-datafiles

MAINTAINERCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh ltmain.sh     \
	Makefile.in missing config.h.in            \
	mkinstalldirs \
	$(NULL)
